# my-devex-project

./: .flake8  .gitignore  CONTRIBUTING.md  DEMO_WALKTHROUGH.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_PREVIEW.md  Makefile  PROJECT_STATUS.txt  README.md  SCREENSHOT_GUIDE.md  SETUP_GUIDE.md  START_HERE.md  VISUAL_PREVIEW.md  app.py  docker-compose.yml  preview.html  pyproject.toml  requirements-dev.txt
docs/: SDD.md
scripts/: check-deps.py  generate-docs.py
tests/: __init__.py  test_app.py
